--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "imports": {
     "#config/*": "./src/config/*",
     "#controllers/*": "./src/controllers/*",
-    "#middlewares/*": "./src/middlewares/*",
+    "#middleware/*": "./src/middleware/*",
     "#routes/*": "./src/routes/*",
     "#services/*": "./src/services/*",
     "#utils/*": "./src/utils/*",
@@ -26,6 +26,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.13",
+    "@arcjet/node": "^1.0.0-beta.13",
     "@prisma/client": "^5.16.1",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
