--- a/.github/workflows/render-ci-cd.yml
+++ b/.github/workflows/render-ci-cd.yml
@@ -29,10 +29,17 @@ jobs:
       - name: 📥 Install dependencies
         run: npm ci
 
-      - name: 🧪 Run Lint & Tests
+      - name: Run tests
+        id: tests
         run: |
-          npm run lint
+          echo "::notice::Running test suite..."
           npm test
+        env:
+          NODE_ENV: test
+          NODE_OPTIONS: --experimental-vm-modules
+          DATABASE_URL: ${{ secrets.TEST_DATABASE_URL || 'postgresql://test:test@localhost:5432/test_acquisitions' }}
+          JWT_SECRET: test-secret-for-ci
+          LOG_LEVEL: error
 
       - name: 🚀 Deploy to Render (if tests pass)
         if: success()
