patch: Apply ingress and pvc in minikube cluster

--- a/k8s/01-postgress-configured.yaml
+++ b/k8s/01-postgress-configured.yaml
@@ -36,12 +36,16 @@ spec:
                 configMapKeyRef:
                   name: app-config
                   key: POSTGRES_DB
+            - name: PGDATA
+              value: /var/lib/postgresql/data/pgdata
           volumeMounts:
             - name: postgress-data
               mountPath: /var/lib/postgresql/data
       volumes:
         - name: postgress-data
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: postgres-pvc
+          # emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
